// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`genLambdaEndpoint.forApiGateway given: [case1] valid request when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": "{"id":"user-123","name":"Alice"}",
  "headers": {
    "Content-Type": "application/json",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case2] invalid request body when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": "{"errorMessage":"✋ ConstraintError: validation failed: email: Invalid email address\\n\\n{\\n  \\"issues\\": [\\n    {\\n      \\"path\\": \\"email\\",\\n      \\"message\\": \\"Invalid email address\\",\\n      \\"code\\": \\"invalid_format\\"\\n    }\\n  ],\\n  \\"hint\\": \\"send a value that satisfies the endpoint's declared input schema — correct each path named in \`issues\`\\"\\n}","errorType":"BadRequestError","details":{"issues":[{"path":"email","message":"Invalid email address","code":"invalid_format"}],"hint":"send a value that satisfies the endpoint's declared input schema — correct each path named in \`issues\`"}}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case3] cors configured when: [t0] handler invoked then: it should include cors headers 1`] = `
{
  "body": "{"result":"ok"}",
  "headers": {
    "Access-Control-Allow-Credentials": "true",
    "Access-Control-Allow-Headers": "content-type,authorization",
    "Access-Control-Allow-Origin": "https://example.com",
    "Content-Type": "application/json",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "Vary": "Origin",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case4] handler error when: [t0] handler throws then: it should return 500 with generic error body 1`] = `
{
  "body": "{"errorMessage":"internal server error","errorType":"InternalServiceError","correlationId":"exid:[masked]"}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case5] access to the reconciled request when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": "{"method":"POST","path":"/users"}",
  "headers": {
    "Content-Type": "application/json",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case6] deserialize body disabled when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": "{"received":"{\\"signature\\":\\"webhook-data\\"}"}",
  "headers": {
    "Content-Type": "application/json",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case7] introspection request in prep env when: [t0] handler invoked with introspect payload then: response matches snapshot 1`] = `
{
  "body": "{"input":{"$schema":"https://json-schema.org/draft/2020-12/schema","type":"object","properties":{"customerId":{"type":"string"}},"required":["customerId"]},"output":{"$schema":"https://json-schema.org/draft/2020-12/schema","type":"object","properties":{"status":{"type":"number"},"headers":{"type":"object","propertyNames":{"type":"string"},"additionalProperties":{"type":"string"}},"body":{"type":"object","properties":{"name":{"type":"string"},"balance":{"type":"number"}},"required":["name","balance"]}}}}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case8] introspection request in prod env when: [t0] handler invoked with introspect payload then: result matches snapshot 1`] = `
{
  "body": "{"errorMessage":"✋ ConstraintError: introspection is only available in prep environment, current: prod\\n\\n{\\n  \\"env\\": {\\n    \\"access\\": \\"prod\\"\\n  },\\n  \\"access\\": \\"prod\\"\\n}","errorType":"BadRequestError","details":{"env":{"access":"prod"},"access":"prod"}}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case9] introspection request without env config when: [t0] handler invoked with introspect payload then: result matches snapshot 1`] = `
{
  "body": "{"errorMessage":"✋ ConstraintError: introspection requires env.access context but env was not provided to handler\\n\\n{\\n  \\"hint\\": \\"pass env config to genLambdaEndpoint\\"\\n}","errorType":"BadRequestError","details":{"hint":"pass env config to genLambdaEndpoint"}}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case10] normal request with env config when: [t0] handler invoked with normal payload then: result matches snapshot 1`] = `
{
  "body": "{"message":"Hello, Bob!"}",
  "headers": {
    "Content-Type": "application/json",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case11] a handler that answers 204 with no body when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": undefined,
  "headers": {
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 204,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case12] a handler that answers 308 with a Location header when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": undefined,
  "headers": {
    "Location": "https://ehmpath.com/surf/pipeline",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 308,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case13] a handler that answers an xml body when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": "<Response><Say>cowabunga</Say></Response>",
  "headers": {
    "Content-Type": "text/xml",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case15] a handler that returns the aws-native wire shape when: [t0] it returns { statusCode, body } — the pre-upgrade habit then: result matches snapshot 1`] = `
{
  "body": "{"errorMessage":"internal server error","errorType":"InternalServiceError","correlationId":"exid:[masked]"}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case17] a body-less envelope, met by an introspection request when: [t1] the body is \`z.undefined()\` — the NAMED idiom, and the one that used to crash then: and the published contract is snapped, in full 1`] = `
{
  "input": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "name": {
        "type": "string",
      },
    },
    "required": [
      "name",
    ],
    "type": "object",
  },
  "output": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "body": {
        "not": {},
      },
      "headers": {
        "additionalProperties": {
          "type": "string",
        },
        "propertyNames": {
          "type": "string",
        },
        "type": "object",
      },
      "status": {
        "type": "number",
      },
    },
    "type": "object",
  },
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case18] a domain object in the schema, through the wired handler when: [t0] the handler is invoked with the wire shape then: and the whole coerced input a handler receives is snapped 1`] = `
{
  "crewFirst": {
    "handle": "moana",
    "home": {
      "breakType": "point",
      "name": "trestles",
    },
    "uuid": "u-2",
  },
  "signup": {
    "note": "paddle out at dawn",
    "spot": {
      "breakType": "reef",
      "name": "mavericks",
    },
  },
  "surfer": {
    "handle": "kai",
    "home": {
      "breakType": "reef",
      "name": "pipeline",
    },
    "uuid": "u-1",
  },
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case18] a domain object in the schema, through the wired handler when: [t1] a value its domain object refuses is sent then: and the body it answers with names the field, loudly 1`] = `
{
  "body": "{"errorMessage":"✋ ConstraintError: validation failed: surfer.home.name: Invalid input: expected string, received undefined; surfer.home.breakType: Invalid input: expected string, received undefined\\n\\n{\\n  \\"issues\\": [\\n    {\\n      \\"path\\": \\"surfer.home.name\\",\\n      \\"message\\": \\"Invalid input: expected string, received undefined\\",\\n      \\"code\\": \\"invalid_type\\"\\n    },\\n    {\\n      \\"path\\": \\"surfer.home.breakType\\",\\n      \\"message\\": \\"Invalid input: expected string, received undefined\\",\\n      \\"code\\": \\"invalid_type\\"\\n    }\\n  ],\\n  \\"hint\\": \\"send a value that satisfies the endpoint's declared input schema — correct each path named in \`issues\`\\"\\n}","errorType":"BadRequestError","details":{"issues":[{"path":"surfer.home.name","message":"Invalid input: expected string, received undefined","code":"invalid_type"},{"path":"surfer.home.breakType","message":"Invalid input: expected string, received undefined","code":"invalid_type"}],"hint":"send a value that satisfies the endpoint's declared input schema — correct each path named in \`issues\`"}}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case19] a nullable domain object in the response BODY, onto the wire when: [t0] the lookup found one then: and the whole payload a caller receives is snapped 1`] = `
{
  "body": "{"lesson":{"uuid":"l-1","spot":"pipeline"}}",
  "headers": {
    "Content-Type": "application/json",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case19] a nullable domain object in the response BODY, onto the wire when: [t1] the lookup found naught, so the position is null then: and the whole payload a caller receives is snapped 1`] = `
{
  "body": "{"lesson":null}",
  "headers": {
    "Content-Type": "application/json",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case20] a bare \`.transform()\` throw on the INPUT side — F35, at THIS family when: [t0] the caller sends a value the consumer guard refuses then: the whole payload, snapped 1`] = `
{
  "body": "{"errorMessage":"internal server error","errorType":"InternalServiceError","correlationId":"exid:[masked]"}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case21] a \`.pipe()\` type-shift at the OUTPUT border, at THIS family when: [t1] the handler obeys the COMPILER and hands back a number then: the whole payload, snapped 1`] = `
{
  "body": "{"errorMessage":"internal server error","errorType":"InternalServiceError","correlationId":"exid:[masked]"}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;
